updated html styling

--- a/index.html
+++ b/index.html
@@ -55,20 +55,27 @@
     </section>
 
     <section id="mywork" class="my-work">
-        <!-- <div class="wrapper"> -->
+        <div class="wrapper">
             <h2>My Work</h2>
             <p class="my-work-para">I specialize in creating website designs.</p>
-        <!-- </div> -->
-        <div class="proj-1"><p id="cta-btn-1">Click image to see more info!</p><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A2&node-id=32%3A5&viewport=173%2C116%2C0.41&scaling=scale-down" target="_blank" alt="website"><img src="./images/twb.svg"></a><p class="description" id="script-1">Completed Brand Identity for local coffee shop.<br><strong class="cta">Click <a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" class="here-btn" target="_blank">here</a> to see full Brand Style Guide</strong></p></div>
-        <div id="ddw-img"class="proj-2"><p id="cta-btn-1">Click image to see more info!</p><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A3&node-id=37%3A2&viewport=352%2C219%2C0.2&scaling=scale-down" target="_blank"><img src="./images/ddw.svg" alt="website"></a><p id="script-2" class="description">Single Page Portfolio Web Design for a Freelance Photographer. </p></div>
-        <div class="proj-3"><p id="cta-btn-1">Click image to see more info!</p><a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"></a><p class="description" id="script-3"> Interactive design created to help small business owner sell their services online.</p></div>
+        <div class="proj-1">
+                <img src="./images/twb.svg" alt="website">
+            <a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" target="_blank"><p id="cta-btn-1">Case Study</p></a>
+                <a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A2&node-id=32%3A5&viewport=173%2C116%2C0.41&scaling=scale-down" target="_blank" alt="website"><p id="cta-btn-1">Style Guide</p></a>
+        </div>
+        <div id="ddw-img"class="proj-2">
+            <img src="./images/ddw.svg" alt="website">
+            <a href="https://xd.adobe.com/view/0685b42e-e36c-4958-a2d0-a96f72ce7510-53d6/?fullscreen"  target="_blank" alt="website"><p id="cta-btn-1">Web Design</p></a>
+            <a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A3&node-id=37%3A2&viewport=352%2C219%2C0.2&scaling=scale-down" target="_blank"><p id="cta-btn-1">Case Study</p></a>
+        </div>
+        <div class="proj-3">
+            <a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"><p id="cta-btn-1">Web Design</p><p id="cta-btn-1">Case Study</p></a>
+        </div>
+        </div>
     </section>
 
     <section class="contact">
         <div class="contact-wrapper">
-            <!-- <div>
-            <img src="./images/leaf-2.png" alt="leaf">
-            </div> -->
             <div>
             <h3>I'm currently available for freelance <br> work.</h3>
             <p>If you’re looking for a designer and developer that likes to get stuff done, let me know.</p>
