updated proj link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
             <a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A3&node-id=37%3A2&viewport=352%2C219%2C0.2&scaling=scale-down" target="_blank"><p id="cta-btn-1">Case Study</p></a>
         </div>
         <div class="proj-3">
-            <a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"><p id="cta-btn-1">Web Design</p><p id="cta-btn-1">Case Study</p></a>
+            <a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"><p id="cta-btn-1">Web Design</p></a>
+            <a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=625%3A57&node-id=625-58&viewport=328%2C-478%2C0.34&scaling=scale-down-width" target="_blank"><p id="cta-btn-1">Case Study</p></a>
         </div>
         </div>
     </section>
