--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="proj-3">
             <a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"><p id="cta-btn-1">Web Design</p></a>
-            <a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=625%3A57&node-id=625-58&viewport=328%2C-478%2C0.34&scaling=scale-down-width" target="_blank"><p id="cta-btn-1">Case Study</p></a>
+            <a href="https://www.figma.com/proto/8T2BP4RW1PTMFLrcOECXpd/CoachSaraCarter?node-id=1-3&scaling=scale-down-width&page-id=0%3A1" target="_blank"><p id="cta-btn-1">Case Study</p></a>
         </div>
         </div>
     </section>
