--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <section class="services">
-        <div class="wrapper">
+        <div class="wrapper services-wrapper">
         <div class="services-1">
             <img class="icon" id="first"src="./images/rocket.svg" alt="rocket icon">
             <strong>Showcasing my skills with designs</strong>
