updated meta tag

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact me to learn more about our products and services, or to request a quote. We're ready to answer your questions and help you find the solutions you need."> 
     <link rel="stylesheet" href="../main.css">
     <script src="https://kit.fontawesome.com/26c852d4d3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
