updated meta tag

--- a/about-me/about.html
+++ b/about-me/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="NV Digital Creations is my freelance web design porfolio. My mission is to help businesses share their passions with the world, and my values include superior quality and on-time delivery. Learn more about me in the about page.">
     <link rel="stylesheet" href="../main.css">
     <script src="https://kit.fontawesome.com/26c852d4d3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
