Created hamburger menu, adjusted nav bar for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -15,32 +15,29 @@
 <body>
     
     <header>
-        <div class="headroom">
-            <div class="content-wrapper">
-                <figure>
+        <nav>
+            <ul class="nav-menu">
+                <li class="logo">
                     <a href="index.html" id="logo">
                         <img src="./images/nv_logo-min.png" alt="logo">
                     </a>
-                </figure>
-                <nav id="top-nav">
-                    <ul class="nav-links show">
-                        <li>
-                            <a href="#logo">Home</a>
-                        </li>
-                        <li>
-                            <a href="about-me/about.html">About Me</a>
-                        </li>
-                        <li>
-                            <a href="contact/contact.html">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
-                <button class="nav-toggle">
-                    <i class="fa-solid fa-bars"></i>
-                </button>
-                <!-- <a href="#" class="cta"><button>Let's Get In Touch</button></a> -->
-            </div>
-        </div>
+                </li>
+                <li class="nav-item">
+                    <a href="#logo" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="about-me/about.html" class="nav-link">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact/contact.html" class="nav-link">Contact</a>
+                </li>
+                <li class="nav-toggle">
+                    <span class="bar"></span>
+                </li>
+            </ul>
+
+            <!-- <a href="#" class="cta"><button>Let's Get In Touch</button></a> -->
+        </nav>
     </header>
 
 <main>
