Created operational hamburger menu with transition

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 <body>
     
     <header>
-        <nav>
+        <nav class="nav-bar">
+            <a href="index.html" id="logo">
+                <img src="./images/nv_logo-min.png" alt="logo">
+            </a>
+
             <ul class="nav-menu">
-                <li class="logo">
-                    <a href="index.html" id="logo">
-                        <img src="./images/nv_logo-min.png" alt="logo">
-                    </a>
-                </li>
                 <li class="nav-item">
                     <a href="#logo" class="nav-link">Home</a>
                 </li>
@@ -31,10 +30,13 @@
                 <li class="nav-item">
                     <a href="contact/contact.html" class="nav-link">Contact</a>
                 </li>
-                <li class="nav-toggle">
-                    <span class="bar"></span>
-                </li>
             </ul>
+            
+            <div class="nav-toggle">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
 
             <!-- <a href="#" class="cta"><button>Let's Get In Touch</button></a> -->
         </nav>
